<resources>
    <string name="app_name">Maps App Java</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="maps">Maps</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="menu">Menu</string>
    <string name="routes">Routes</string>
    <string name="response_API">Response from the API is :</string>
</resources>