<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/secondNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/firstNameInput"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/secondNameInput"
        app:layout_constraintTop_toBottomOf="@+id/secondNameInput" />

    <EditText
        android:id="@+id/passwordInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/passwordinput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/passwordInput1"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput1" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:onClick="getDetails"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="@+id/passwordinput2"
        app:layout_constraintTop_toBottomOf="@+id/passwordinput2" />

    <TextView
        android:id="@+id/idTVResponse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton" />
</androidx.constraintlayout.widget.ConstraintLayout>